VER_002
- Add proper support for play, say and move commands

VER_001
- First version on GIT